[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vtaskr"
authors = [
    {name = "Valentin B", email = "contact@valbou.fr"},
]
description = "An open-source to do list application"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU General Public License v3.0"}
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "alembic",
    "argon2-cffi",
    "Flask",
    "gunicorn",
    "Jinja2",
    "Babel",
    "python-dotenv",
    "SQLAlchemy",
    "redis",
    "psycopg2-binary",
    "requests",
]
dynamic = ["version"]

optional-dependencies.dev = [
    "black",
    "isort",
    "coverage",
    "bandit",
    "colorama",
    "Faker",
    "flake8",
    "mccabe",
    "mkdocs",
]

[tool.setuptools_scm]

[tool.isort]
profile = "black"

[tool.coverage.run]
omit = ["*/tests/*"]

[tool.bandit]
exclude_dirs = ["build", "hooks", "tests"]

[tool.coverage.report]
fail_under = 90
skip_covered = true
skip_empty = true
sort = "cover"
